--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,8 @@ subprojects {
     }
 
     dependencies {
-        testCompile('junit:junit:4.12')
+        testCompile "org.mockito:mockito-core:1.10.19"
+        testCompile "junit:junit:4.12"
+        testCompile "org.assertj:assertj-core:3.5.2"
     }
 }
