--- a/user-domain/build.gradle
+++ b/user-domain/build.gradle
@@ -1,3 +1,3 @@
 dependencies {
-    compile('com.github.eventasia:framework:1.0.0-SNAPSHOT')
+    compile('com.github.eventasia:eventasia-framework:0.0.8.RELEASE')
 }
