--- a/user-service/build.gradle
+++ b/user-service/build.gradle
@@ -5,6 +5,6 @@ dependencies {
     compile project(":user-domain")
 
     compile "org.springframework.boot:spring-boot-starter-web"
-    compile "com.github.eventasia:event-store:1.0.0-SNAPSHOT"
+    compile "com.github.eventasia:eventasia-starter:0.0.8.RELEASE"
 
 }
